--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,15 @@ version: '3'
 services:
   nginx:
     build: ./src/app
+    ports:
+    - "80:80"
+    - "8081:8081"
+    environment:
+    - NGINX_HOST=localhost
+    - NGINX_PORT=80
+    links:
+    - redis
+  redis:
+    image: "redis:alpine"
+    ports:
+    - "6379:6379"
