--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -115,7 +115,8 @@ ENV PATH=$PATH:/usr/local/openresty/luajit/bin:/usr/local/openresty/nginx/sbin:/
 
 # Copy nginx configuration files
 COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
-#COPY nginx.vh.default.conf /etc/nginx/conf.d/default.conf
+COPY nginx.vh.default.conf /etc/nginx/conf.d/default.conf
+COPY app.lua /usr/local/openresty/nginx/app.lua
 
 CMD ["/usr/local/openresty/bin/openresty", "-g", "daemon off;"]
 
